# Chandra_ros2_robot_arm

./: .gitignore  ABOUT.md  README.md  bashrc  build.sh  runner.sh
src/chandra_box_detector/: package.xml  setup.cfg  setup.py
src/chandra_box_detector/chandra_box_detector/: box_detector.py  temp.py
src/chandra_box_detector/launch/: box_detector_launch.py
src/chandra_control/: CMakeLists.txt  chandra_interface.xml  package.xml
src/chandra_control/config/: chandra_controllers.yaml
src/chandra_control/include/chandra_control/: chandra_interface.hpp  robot_arm_defs.h  robot_arm_driver.hpp
src/chandra_control/include/chandra_controller/: chandra_interface.hpp  robot_arm_driver.hpp
src/chandra_control/launch/: controller.launch.py  controller.launch.xml  real_hw_controller.launch.py  slider.launch.py  slider_controller.launch.xml
src/chandra_control/src/: chandra_interface.cpp  robot_arm_driver.cpp  slider_control.cpp
src/chandra_description/: CMakeLists.txt  package.xml
src/chandra_description/launch/: display.launch.xml
src/chandra_description/meshes/: gripper_left_finger.STL  gripper_right_finger.STL
src/chandra_description/rviz/: config.rviz
src/chandra_description/urdf/: chandra_arm.urdf.xacro  chandra_arm_control.xacro  chandra_arm_gazebo.xacro
src/chandra_gazebo/: CMakeLists.txt  package.xml
src/chandra_gazebo/launch/: display.launch.xml  gazebo.launch.xml
src/chandra_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/chandra_moveit/config/: chandra.srdf  moveit_controllers.yaml
src/chandra_moveit/launch/: move_group.launch.py  moveit_rviz.launch.py
